--- a/Bookworm/Bookworm/Base.lproj/LaunchScreen.storyboard
+++ b/Bookworm/Bookworm/Base.lproj/LaunchScreen.storyboard
@@ -18,7 +18,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="Bookworm" translatesAutoresizingMaskIntoConstraints="NO" id="0LK-LF-55d">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="Bookworm" translatesAutoresizingMaskIntoConstraints="NO" id="0LK-LF-55d">
                                 <rect key="frame" x="275" y="150" width="50" height="70"/>
                             </imageView>
                             <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="  Copyright (c) 2016 Syzygy. All rights reserved." textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="11s-hZ-1JU">
@@ -30,7 +30,7 @@
                                 <color key="textColor" red="0.80000001192092896" green="0.80000001192092896" blue="0.80000001192092896" alpha="1" colorSpace="calibratedRGB"/>
                                 <nil key="highlightedColor"/>
                             </label>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" text="分享最精品的书" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="HHD-WC-VGV">
+                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="分享最精品的书" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumFontSize="9" translatesAutoresizingMaskIntoConstraints="NO" id="HHD-WC-VGV">
                                 <rect key="frame" x="19" y="240" width="561" height="21"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="AbF-j2-Jza"/>
@@ -45,8 +45,8 @@
                             <constraint firstItem="0LK-LF-55d" firstAttribute="centerX" secondItem="sNn-DJ-xJx" secondAttribute="centerX" id="Bhe-Mj-Zr7"/>
                             <constraint firstItem="HHD-WC-VGV" firstAttribute="top" secondItem="0LK-LF-55d" secondAttribute="bottom" constant="20" id="ESl-dV-Z1x"/>
                             <constraint firstItem="11s-hZ-1JU" firstAttribute="leading" secondItem="sNn-DJ-xJx" secondAttribute="leadingMargin" id="IMO-bt-4a7"/>
+                            <constraint firstItem="0LK-LF-55d" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="130" id="bU5-dE-Itx"/>
                             <constraint firstItem="0LK-LF-55d" firstAttribute="centerX" secondItem="HHD-WC-VGV" secondAttribute="centerX" id="ctx-91-OHP"/>
-                            <constraint firstItem="0LK-LF-55d" firstAttribute="top" secondItem="Llm-lL-Icb" secondAttribute="bottom" constant="130" id="dl1-zR-Psu"/>
                             <constraint firstItem="11s-hZ-1JU" firstAttribute="centerX" secondItem="0LK-LF-55d" secondAttribute="centerX" id="g22-hU-qHB"/>
                             <constraint firstItem="HHD-WC-VGV" firstAttribute="trailing" secondItem="sNn-DJ-xJx" secondAttribute="trailingMargin" id="iHQ-CD-JIX"/>
                             <constraint firstAttribute="bottom" secondItem="11s-hZ-1JU" secondAttribute="bottom" constant="20" symbolic="YES" id="zUz-se-KRj"/>
